# yt-text

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  hello.py  main.go  main.py  makefile  progress.md  pyproject.toml  refactor.md  summarize.py  test_basic.py  todo.md  transcribe.py  validate.py
.do/: app.yaml
.github/workflows/: README.md  cd.yml  ci.yml  docker-image.yml  go.yml  security.yml
ai/: STATUS.md
ai/design/: v2-architecture.md
api/: package.json  schema.sql  tsconfig.json  wrangler.toml
api/src/: index.ts
app/: Dockerfile  coverage.txt  go.mod  go.sum  main.go
app/config/: config.go
app/db/: db.go
app/errors/: errors.go  errors_test.go
app/handlers/: error.go  handlers.go  handlers_test.go  health.go  video.go
app/handlers/api/: handler.go  server.go  summary.go  video.go
app/logger/: logger.go
app/middleware/: logging.go  middleware.go  middleware_test.go
app/models/: dto.go  video.go
app/protos/: transcribe.pb.go  transcribe.proto  transcribe_grpc.pb.go
app/repository/: repository.go
app/repository/sqlite/: db.go  queries.go  statements.go  video.go
app/scripts/: errors.go  factory.go  grpc_client.go  runner.go  scripts.go  transcribe.go  types.go  validate.go
app/services/subtitles/: service.go
app/services/summary/: interface.go  service.go
app/services/video/: interface.go  queue.go  service.go
app/static/: formHandler.js  index.html
app/storage/: spaces.go
app/tests/: README.md
app/tests/handlers/: health_test.go
app/transcription/: transcription.go  transcription_test.go
app/utils/: utils.go  utils_test.go
app/validation/: validation.go  validation_test.go
app/yt-text/app/services/video/: types.go
config/: config.go  config_test.go
data/: db.sqlite
db/: db.go  db_test.go
docker/fly/: Dockerfile  README.md  docker-compose.yml  fly.toml
docker/local/: Dockerfile  README.md  docker-compose.yml
docs/: AI_DOCS_PROMPT.md  STATUS.md  TECH_SPEC.md  TODO.md
docs/api/: endpoints.md
docs/deployment/: config.md
docs/implementation/: litestar-patterns.md  patterns.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/components/: Icons.jsx  ProgressCard.jsx  ResultCard.jsx  TranscriptionForm.jsx
frontend/src/services/: api.js
handlers/: handlers.go  handlers_test.go
local/: cli.py  pyproject.toml
middleware/: logging.go
modal/: app.py  pyproject.toml
python/: dev-requirements.txt  generate_grpc.py  pyproject.toml  requirements.txt  start_grpc.sh  test-results.xml  test-transcription-results.xml
python/scripts/: __init__.py  api.py  get_subtitles.py  requirements.txt  summarize.py  transcribe.py  transcription.py  validate.py  youtube_captions.py  yt-text.py  ytext.py
python/scripts/grpc/: __init__.py  server.py  start_server.py  transcribe_pb2.py  transcribe_pb2_grpc.py
python/tests/: README.md  test_api.py  test_grpc_server.py  test_transcription.py  test_transcription_advanced.py  test_validate.py  test_validate_advanced.py  test_youtube_captions.py  test_ytext.py
src/: __init__.py  cli.py
src/api/: app.py  routes.py
src/core/: config.py  deps.py  models.py
src/lib/backends/: base.py  factory.py  fallback_whisper.py  mlx_whisper.py  openai_api.py  whisper_cpp.py
src/services/: cache.py  download.py  transcription.py
static/: formHandler.js  index.html  utils.js
static/js/: formHandler.js
transcription/: transcription.go  transcription_test.go
validation/: validation.go  validation_test.go
