[project]
name = "yt-text-worker"
version = "0.1.0"
description = "GPU transcription worker for yt-text"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.68.0",
    "yt-dlp>=2024.11.18",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
