[project]
name = "yt-text-worker"
version = "0.1.0"
description = "GPU transcription worker for yt-text"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.68.0",
    "yt-dlp>=2024.11.18",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# nemo_toolkit is installed in Modal container image, not locally
# Add it here only if you need to run locally with NVIDIA GPU
nemo = [
    "nemo_toolkit[asr]>=2.0.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
