[project]
name = "yt-text"
version = "0.1.0"
description = "Download YouTube audio and convert it to text using yt-dlp and OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"faster-whisper>=1.0.3",
	"torch>=2.5.1",
	"yt-dlp>=2024.11.18",
	"psutil>=5.9.0",
	"numpy>=1.22.0",
	"librosa>=0.10.0",
	"soundfile>=0.12.1",
]
