[project]
name = "yt-text"
version = "0.1.0"
description = "Download YouTube audio and convert it to text using yt-dlp and OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"faster-whisper>=1.0.3",
	"torch>=2.5.1",
	"yt-dlp>=2024.11.18",
	"psutil>=5.9.0",
	"numpy>=1.22.0",
	"librosa>=0.10.0",
	"soundfile>=0.12.1",
	"beautifulsoup4>=4.12.2",
	"requests>=2.31.0",
	"lxml>=4.9.3",
	"python-dotenv>=1.0.0",
	"grpcio>=1.60.0",
	"grpcio-tools>=1.60.0",
	"protobuf>=4.25.1",
	"pydub>=0.25.1",
]
